# nixops-proxmox

./: README.md  TODO.md  default.nix  overrides.nix  pyproject.toml  shell.nix
examples/: nixops.nix
nixops_proxmox/: plugin.py
nixops_proxmox/backends/: proxmox.py
nixops_proxmox/nix/: default.nix  iso.nix  proxmox.nix
