[tool.poetry]
name = "nixops-proxmox"
version = "0.1.0"
description = "NixOps plugin for Proxmox"
authors = ["Jared Baur <jaredbaur@fastmail.com>"]
include = [ "nixops_proxmox/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.8"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
proxmox = "nixops_proxmox.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
